<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_car"
        android:layout_width="164dp"
        android:layout_height="23dp"
        android:text="@string/car_health_updates"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_request"
        android:layout_width="164dp"
        android:layout_height="23dp"
        android:text="@string/request_a_rescue_online"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_car"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_check3"
        android:layout_width="17dp"
        android:layout_height="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_policy"
        app:layout_constraintEnd_toStartOf="@+id/txt_policy"
        app:srcCompat="@drawable/tick"
        android:contentDescription="@string/policy_information" />

    <ImageView
        android:id="@+id/iv_check2"
        android:layout_width="17dp"
        android:layout_height="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_request"
        app:layout_constraintEnd_toStartOf="@+id/txt_request"
        app:srcCompat="@drawable/tick"
        android:contentDescription="@string/request_a_rescue_online" />

    <ImageView
        android:id="@+id/iv_check1"
        android:layout_width="17dp"
        android:layout_height="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_car"
        app:layout_constraintEnd_toStartOf="@+id/txt_car"
        app:srcCompat="@drawable/tick"
        android:contentDescription="@string/car_health_updates" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/desc_logo_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="251dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sans300"
        android:text="@string/lvl_description_gf"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_policy"
        android:layout_width="164dp"
        android:layout_height="23dp"
        android:text="@string/policy_information"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_request" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_todo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/sans300"
        android:text="@string/txt_create_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>